# SecureAndroid

./: .gitignore  .gitmodules  README.md
src/client/: settings.gradle
src/client/android/app/: build.gradle
src/client/android/app/src/main/: AndroidManifest.xml
src/client/android/app/src/main/cmakeLibs/arm64-v8a/: libcurl.la
src/client/android/app/src/main/cmakeLibs/arm64-v8a/pkgconfig/: libcrypto.pc  libcurl.pc  libssl.pc  openssl.pc
src/client/android/app/src/main/cpp/: CMakeLists.txt  poc.cpp
src/client/android/app/src/main/cpp/curl/arm64-v8a/lib/: libcurl.la
src/client/android/app/src/main/cpp/curl/arm64-v8a/lib/pkgconfig/: libcurl.pc
src/client/android/app/src/main/cpp/curl/armeabi-v7a/lib/: libcurl.la
src/client/android/app/src/main/cpp/curl/armeabi-v7a/lib/pkgconfig/: libcurl.pc
src/client/android/app/src/main/cpp/curl/armeabi-v7a/share/man/man3/: libcurl-symbols.3
src/client/android/app/src/main/cpp/curl/x86_64/lib/: libcurl.la
src/client/android/app/src/main/cpp/curl/x86_64/lib/pkgconfig/: libcurl.pc
src/client/android/app/src/main/cpp/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/client/android/app/src/main/cpp/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/client/android/app/src/main/cpp/openssl/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/client/android/app/src/main/res/values/: themes.xml
src/client/android/app/src/main/res/values-night/: themes.xml
src/client/android/gradle/wrapper/: gradle-wrapper.properties
src/client/app/: build.gradle
src/client/app/src/androidTest/java/com/tritonnet/secureandroid/poc/: ExampleInstrumentedTest.kt
src/client/app/src/main/cpp/: CMakeLists.txt  poc.cpp
src/client/app/src/main/res/layout/: activity_main.xml
src/client/app/src/main/res/values/: strings.xml
src/server/Secure Android Server/: Secure Android Server.sln
src/server/Secure Android Server/secure_android.server/: CertificateValidation.cs  Program.cs  Startup.cs  secure_android.server.csproj
src/server/Secure Android Server/secure_android.server/Controllers/: ServiceController.cs
src/server/Secure Android Server/secure_android.server/Properties/: launchSettings.json
(+2 files in other folders)
